Fixed safety button spacing and line-spacing

--- a/src/components/safety/safety.css
+++ b/src/components/safety/safety.css
@@ -9,6 +9,7 @@ a.safety__link {
   background-color: rgba(255, 0, 0, 0.2);
   font-size: 25px;
   font-weight: bold;
+  line-height: 1;
   margin: 20px 0 0 0;
   height: 75px;
   width: 200px;
